--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $ 
+  github_token: $GITHUB_TOKEN
   keep_history: true
   local_dir: docs
   on:
