--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ after_success:
 - jazzy --xcodebuild-arguments -scheme,TravisTest --module TravisTest --source-directory TravisTest --readme README.md
 
 deploy:
-  provider: pages
+  provider: pages:git
   skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   keep_history: true
   local_dir: docs
   on:
