--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ script:
 after_success:
   # generate docs
 - jazzy --xcodebuild-arguments -scheme,TravisTest --module TravisTest --source-directory TravisTest --readme README.md
+- bundle exec jazzy
+  --xcodebuild-arguments -scheme,TravisTestTests
+  --module TravisTest
+  --source-directory TravisTest
+  --readme README.md
 
 deploy:
   provider: pages
