--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ osx_image: xcode11.1
 before_install:
 - bundle install
 
-script:
-- fastlane ci
-- bundle exec danger
+# script:
+# - fastlane ci
+# - bundle exec danger
 
 after_success:
   # generate docs
